core/page/css/layout/layout.less
/* ... */
// component
	.wrapper_component {
		position: relative;

		&.active {
			// box-shadow: 3px 5px 8px 1px #c6c6c6;
			z-index: 1;
			.buttons_container {
				display: block !important;
			}
		}

		&.edit {
			// max-height: 27em;

			// component_section_id
			&.component_section_id {
				flex: 0 0 100%;
				background-color: #f78a1c;
				color: white;

				.section_id {
					font-weight: bold;
					font-size: larger;
					letter-spacing: 0.05em;
				}
			}

			// component_check_box
			&.component_check_box {
				>.content_data {
					overflow: auto;
				}
			}

			// component_image
			&.component_image {
				>.content_data {
					max-height: @media_max_height;

					// image
					.image  {
						height: 100%;
						// height: auto;
						max-height: 100%;
						// width: 100%;
						max-width: 100%;
						//min-height: 14em;
						//background-position: initial;
						//background-size: cover;
						background-repeat: no-repeat;
						background-size: contain;
						background-position: center;
						object-fit: contain;
						object-position: center;

						// on focus adds a soft shadow and outline
						&:focus {
							.hilite(-1px);
						}
					}

					img {
						padding: 0;
						flex: 1;
						// height: 100%;
						// max-height: 10em;
						// width: 100%;
					}
				}
			}

			// component_av
			&.component_av {
				>.content_data {
					max-height: @media_max_height;
					height: 100%;

					// posterframe
					.posterframe  {
						// height: 100%;
						max-height: 100%;
						// width: 100%;
						max-width: 100%;
						//min-height: 14em;
						//background-position: initial;
						//background-size: cover;
						background-repeat: no-repeat;
						background-size: contain;
						background-position: center;
						object-fit: contain;
						object-position: center;
						align-self: center;

						// on focus adds a soft shadow and outline
						&:focus {
							.hilite(-1px);
						}
					}
				}
			}

			// component_svg
			&.component_svg {
				>.content_data {
					max-height: @media_max_height;
				}
				img.image {
					padding: 0;
					height: 100%;
					//max-height: 10em;
					width: 100%;
				}
			}

			// component pdf
			&.component_pdf {
				min-height: 50em;
				>.content_data {
					height: calc(100% - 1.5em);
				}
			}

			// component json
			&.component_json {
				>.content_data {
					height: 100%;
					// max-height: @media_max_height;
					padding-bottom: 3em;
					min-height: 30.5em;

					.inputs_container>li {
						// align-items: initial;
					}

					// override json editor
					.ace_gutter {
						z-index: unset;
					}
					div.jsoneditor-mode-code{
						// height: 100vh; //100vh if you want full screen
					}
				}
			}

			// component_text_area
			&.component_text_area {
				>.content_data {
					// min-height: @media_max_height;
					// background-color: #BEF0FA;
				}
			}

			>.content_data {
				//height: 100%;
				max-height: inherit;
			}

		}//end &.edit


		&.list {

			&.component_image, &.component_av, &.component_svg {
				padding: 0;
				background-color: #ffffff;
				text-align: center;
				display: block;

				>img {
					padding: 0;
					height: 100%;
					max-height: 5em;
					width: auto;
					// fit image contains
					object-fit: contain;
					object-position: center;
					// center horizontally
					position: absolute;
					left: 50%;
					transform: translate(-50%);
				}
			}

		}//end &.list


		&.edit_in_list {

			>*  {
				padding: 0 !important;
			}

		}//end &.edit_in_list


		// inside .section_record.edit context
		//.section_record.edit &, .components_container & { 22
		.section_record &, .wrapper_tool & {
			// flex base config
			.component_base;

			background-color: rgba(251, 251, 251, 0.70); //#FBFBFB;
			outline: 1px solid rgba(216, 216, 216, 0.43);

			>* {
				padding: 1em;

				&.paginator {
					padding: 0.5em;
    				padding-left: 1em;
				}
			}

			>.label {
				// background-color: #FEDACF;
				// flex: 1 0 calc(20% - 2em);
				flex: 1 1 100%;
				padding-bottom: 0;
				padding-top: 0.75em;
				// color: #7c7c7c;

				letter-spacing: 0.5px;
				text-overflow: ellipsis;
				overflow: hidden;
				white-space: nowrap;
				cursor: default;
				font-family: Oxygen,"Helvetica Neue",Helvetica,Arial,sans-serif;
				font-weight: 100;
				color: #9e9e9e;
			}
			>.content_data {
				// background-color: #B9DFF6;
				// flex: 1 0 calc(80% - 2em);
				flex: 1 1 100%;

				display: flex;
				flex-wrap: wrap;
				//flex-flow: column;
				align-items: flex-start;
				padding-top: 0.5em;


				@media screen and (max-width: @width_break_point_1) {
					flex: 1 1 100%;
				}

				>ul {
					height: 100%;
				}

				&.vertical {
					flex: 1 1 100%;
					background-color: #a1cccc5c;
					justify-content: center;
					flex-flow: unset;
				}


				>.inputs_container {
					flex: 1 1 auto;
				}

				>.buttons_container {
					display: none;
					background-color: #ffffff;
					// background-color: #BDFF69;
					flex: 0 1 1em;
					padding: 0; // 0.15em;
					// border-radius: 0.25em;
					//position: relative;

					// 2
					position: absolute;
					top: 0;
					// right: 0;

					// 3
					left: 100%;
					z-index: 1;
					background-color: #ffa03f;
					height: 100%;
					box-shadow: 2px 2px 5px 0 rgba(38, 38, 38, 0.3);
					border-top-right-radius: 0.25em;
					border-bottom-right-radius: 0.25em;

					>*{
						//margin: 0.365em;
						//line-height: 1.25em;
					}

					>.close {
						position: absolute;
						top: -0.1em;
						right: -0.4em;
						color: #f78a1c;
						opacity: 1;
						z-index: 2;
					}
				}

				//&.nowrap {
				//	flex-wrap: nowrap;
				//	flex-flow: nowrap;
				//}
			}

			// @media screen and (max-width: 768px) {
			@media screen and (max-width: 1280px) {
				flex-basis: 100% !important;
			}
		}
	}//end .wrapper_component



	.nowrap {
		flex-wrap: nowrap !important;
		flex-flow: nowrap !important;
	}
/* ... */

